--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -16,5 +16,9 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 12px;
+  }
+  .cards {
+    padding-bottom: 20px;
   }
 }
