--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -2,5 +2,10 @@
   text-align: center;
   font-size: 16px;
   color: #212121b3;
+  margin: 0;
+  line-height: 100%;
+  font-weight: 400;
+}
+.footer {
   padding: 60px 0;
 }
