--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -63,6 +63,12 @@
   font-size: 32px;
   line-height: 1;
   color: #212121;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 .profile__description {
   margin: 0;
@@ -70,6 +76,12 @@
   font-size: 16px;
   line-height: 100%;
   font-weight: 500;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 @media screen and (max-width: 627px) {
   .profile {
