--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -45,7 +45,7 @@
   right: 50px;
   width: 40px;
   height: 40px;
-  background: url(/images/Close.svg) no-repeat center;
+  background: url(../images/Close.svg) no-repeat center;
   border: none;
   cursor: pointer;
   opacity: 40%;
@@ -54,7 +54,7 @@
 .modal__submit-btn {
   max-width: 156px;
   height: 52px;
-  color: white;
+  color: #fcf5e5;
   background-color: #212121;
   border-radius: 8px;
   border: none;
@@ -64,6 +64,7 @@
 }
 
 .modal__title {
+  color: #212121;
   font-size: 32px;
   font-weight: 500;
   margin: 0 0 32px;
@@ -75,6 +76,10 @@
 }
 
 .modal__label {
+  font-size: 16px;
+  line-height: 110%;
+  opacity: 0.7;
+  color: #212121;
   margin: 0 0 32px;
 }
 
@@ -90,6 +95,9 @@
   font-size: 16px;
   outline: none;
   width: 100%;
+  color: #212121;
+  opacity: 0.3;
+  font-weight: 500;
 }
 
 .modal__input::placeholder {
@@ -107,7 +115,7 @@
   }
 
   .modal__input {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .modal__submit-btn {
