--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -22,7 +22,7 @@
   background-color: #212121;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   white-space: nowrap;
   gap: 8px;
   cursor: pointer;
